Add put test for HashTable